<resources>

    <!-- Strings related to content main -->
    <string name="app_name">TeaTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="orange_tea">Orange Tea</string>
    <string name="green_tea">Green Tea</string>
    <string name="red_tea">Red Tea</string>
    <string name="blue_tea">Blue Tea</string>
    <string name="purple_tea">Purple Tea</string>
    <string name="title_activity_settings">Settings</string>
    <string name="brew_timer">Brew Timer</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">User Name</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Allow Notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="setting_language">Language</string>
    <string name="setting_mode">Mode</string>
    <string name="enable_fr">Enable French Support</string>
    <string name="enable_fr_desc">Translate the entire application to support french users</string>
    <string name="nav_all">Select All</string>
    <string name="nav_type_the">Type of Tea</string>
    <string name="nav_type_blanc">White Tea</string>
    <string name="nav_type_vert">Green Tea</string>
    <string name="nav_type_bleu">Blue Tea (Oolong)</string>
    <string name="nav_type_rouge">Black Tea (Red)</string>
    <string name="nav_type_sombre">Post-Fermented Tea</string>
    <string name="nav_prop_the">Properties</string>
    <string name="nav_prop_caffeine">Caffeine</string>
    <string name="nav_prop_flame">Anti-Inflammatory</string>
    <string name="nav_bon_avec">Good With...</string>
    <string name="nav_good_sucre">Sugar</string>
    <string name="nav_good_lait">Milk</string>
    <string name="nav_good_autre">Other</string>
    <string name="chronoLabel">Brew Timer</string>
    <string name="no_result">No Result. Make sure you extend your search range.</string>
    <string name="notification_title">Your Tea is ready!</string>
    <string name="notification_text">Your tea %s is done brewing!</string>
    <string name="search_hint">Search Tea by name...</string>
    <string name="appbar_search">Search Tea by name</string>
    <string name="appbar_settings">Open Settings</string>
    <string name="changeApply_summary">These changes will apply on the next application restart</string>
    <string name="channel_name" translatable="false">tea_time_channel</string>
    <string name="notification_allow_key" translatable="false">notification_allow</string>
    <string name="notification_vibrate_key" translatable="false">notification_vibrate</string>
    <string name="enable_fr_key" translatable="false">enable_fr</string>
    <string name="filter_preferences_key" translatable="false">filterPreferences</string>
    <string name="intent_setting_key" translatable="false">SETTINGS_TO_MAIN</string>
</resources>
