<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_gr_criteria">
        <item
            android:id="@+id/nav_all"
            android:title="@string/nav_all" />
        <item
            android:id="@+id/nav_type_the"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            android:title="@string/nav_type_the" />
        <item
            android:id="@+id/nav_type_blanc"
            android:title="@string/nav_type_blanc"
            android:visible="false" />
            <item
                android:id="@+id/nav_type_vert"
                android:title="@string/nav_type_vert"
                android:visible="false" />
            <item
                android:id="@+id/nav_type_bleu"
                android:title="@string/nav_type_bleu"
                android:visible="false" />
            <item
                android:id="@+id/nav_type_rouge"
                android:title="@string/nav_type_rouge"
                android:visible="false" />
            <item
                android:id="@+id/nav_type_sombre"
                android:title="@string/nav_type_sombre"
                android:visible="false" />
        <item
            android:id="@+id/nav_prop_the"
            android:icon="@drawable/ic_health_black_24dp"
            android:title="@string/nav_prop_the" />
            <item
                android:id="@+id/nav_prop_caffeine"
                android:title="@string/nav_prop_caffeine"
                android:visible="false" />
            <item
                android:id="@+id/nav_prop_flame"
                android:title="@string/nav_prop_flame"
                android:visible="false" />
        <item
            android:id="@+id/nav_bon_avec"
            android:icon="@drawable/ic_heart_black_24dp"
            android:title="@string/nav_bon_avec" />
            <item
                android:id="@+id/nav_good_sucre"
                android:title="@string/nav_good_sucre"
                android:visible="false" />
            <item
                android:id="@+id/nav_good_lait"
                android:title="@string/nav_good_lait"
                android:visible="false" />
            <item
                android:id="@+id/nav_good_autre"
                android:title="@string/nav_good_autre"
                android:visible="false" />
    </group>
</menu>
